--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
   <h1 id="section4">四、常见问题（FAQ）</h1>
   <p><strong>Q1：</strong> 这个公约适用于哪些人？<br/> <strong>A：</strong> 所有 Bigo Live 用户，包括观众、主播、内容创作者。</p>
   <p><strong>Q2：</strong> 哪些行为容易被封号？<br/> <strong>A：</strong> 色情暴露、暴力引流、未成年违规等，详见内容规范。</p>
-  <p><strong>Q3：</strong> 如果我被误封了怎么办？<br/> <strong>A：</strong> 可通过申诉中心提交复核申请，3个工作日内处理。</p>
+  <p><strong>Q3：</strong> 如果我被误封了怎么办？<br/> <strong>A：</strong> 可通过申诉中心提交复核申请，我们会尽快处理。</p>
   <p><strong>Q4：</strong> 所有违规行为处罚一样吗？<br/> <strong>A：</strong> 不同违规根据严重程度采取不同措施，详见处罚机制。</p>
 
 </main>
